--- a/app/views/commands/_form.html.erb
+++ b/app/views/commands/_form.html.erb
@@ -18,9 +18,9 @@
           action: "keydown.up->toggle-class#add:prevent keydown.up->navigable-list#selectCurrentOrLast terminal#hideError"
         },
         placeholder: "Press ⌘+K to search or type /commands…",
+        turbo_permanent: true,
         spellcheck: "false" %>
 
   <%=  hidden_field_tag "confirmed", nil, data: { terminal_target: "confirmation" } %>
-  <%=  hidden_field_tag "redirected", nil, data: { terminal_target: "redirected" } %>
 <% end %>
 
