--- a/app/views/collections/edit/_auto_close.html.erb
+++ b/app/views/collections/edit/_auto_close.html.erb
@@ -1,4 +1,4 @@
 <div class="margin-block-end">
   <strong class="divider txt-large">Do or Die</strong>
-  <%= render "entropy/auto_close", model: collection %>
+  <%= render "entropy/auto_close", model: collection, url: collection_entropy_configuration_path(collection) %>
 </div>
